# HarvestKit

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.finn.yaml  config.general.example.yaml  config.germany.yaml  config.jobsch.yaml  config.karrierestart.yaml  config.nav.yaml  config.norway-big.yaml  config.norway-it.yaml  config.norway-top5.yaml  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_site_adapter.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: ARCHITECTURE.md
extension/: README.md  build.mjs  manifest.json  package-lock.json  package.json  tsconfig.json
extension/app/src/background/: bulk.ts  main.ts
extension/app/src/components/: JobDrawer.tsx  Toasts.tsx
extension/app/src/content/: detector.ts  expandContent.ts  extractor.ts  generalExtract.ts  generalSites.ts  inject.tsx  paginator.ts  smartDetector.ts
extension/app/src/lib/: db.ts  export.ts  generalSchema.ts  messages.ts  schema.ts  utils.ts
extension/app/src/sidepanel/: App.tsx
extension/app/src/stores/: ui.ts
extension/app/src/styles/: base.css
extension/app/src/views/: Dashboard.tsx  Library.tsx  Runs.tsx  Settings.tsx
extension/src/background/: bulk.js  service-worker.js  store.js
extension/src/content/: detector.js  expandContent.js  extractor.js  inject.js  listExtractor.js  paginator.js  smartDetector.js
extension/src/content/adapters/: ashby.js  greenhouse.js  index.js  lever.js  linkedin.js  personio.js  smartrecruiters.js  workday.js
extension/src/lib/: schema.js  utils.js
extension/src/popup/: popup.css  popup.html  popup.js
extension/tests/: smoke.mjs  test_jobrapido.mjs
src/general_scraper/: __init__.py  extract.py  main.py  models.py
src/job_scraper/: config.py  crawl.py  dedupe.py  deep_scrape.py  discovery.py  extract.py  http.py  llm_adapter.py  main.py  models.py  normalize.py  robots.py  universal.py
src/job_scraper/adapters/: __init__.py  arbeitsagentur.py  ashby.py  base.py  finn.py  generic.py  greenhouse.py  jobbsafari.py  jobsch.py  karrierestart.py  lever.py  nav.py  personio.py  recruitee.py  smartrecruiters.py  workable.py  workday.py
src/job_scraper/export/: __init__.py  csv_exporter.py  gsheets_exporter.py  notion_exporter.py  slack_exporter.py
tests/: test_smoke.py
tools/: extract_from_cache.py  fetch_free_proxies.py
(+11 files in other folders)
